# ebook-prompt-suite

./: .gitignore  README.md
worker/: ebook-image-forge-key.txt  package-lock.json  package.json  test.out  worker-configuration.d.ts  wrangler.jsonc
worker/src/: index.ts
yew/: Cargo.toml  Trunk.toml  index.html
yew/src/: main.rs
