[package]
name = "ebook_prompt_studio"
version = "0.1.0"
edition = "2021"

[dependencies]
yew = { version = "0.21", features = ["csr"] }
gloo-net = "0.6"
serde = { version = "1", features = ["derive"] }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
futures-channel = "0.3"

web-sys = { version = "0.3", features = [
  "Window",
  "Document",
  "Storage",
  "Blob",
  "BlobPropertyBag",
  "Url",
  "HtmlCanvasElement",
  "CanvasRenderingContext2d",
  "HtmlImageElement",
  "Event",
] }